Evolution 3.0.1 : - correction style contrasté

--- a/design/css/default.css
+++ b/design/css/default.css
@@ -123,7 +123,7 @@ div#cdlToolTipDiv *{background-color:#FFFFCC;color:#000000}
 .cdlAudioPrevLine:after,.cdlAudioPlay:after,.cdlAudioNextLine:after{content:"";display:block;width:0;height:0;border:solid transparent;position:absolute;top:0;right:0}
 .cdlAudioNextLine{border-right:solid}
 input[type="search"]::-webkit-search-cancel-button{-webkit-appearance:none;height:0;width:0;background:transparent}
-.cdlContraste{margin:.3em 0;padding:7px 10px;border-radius:7px;-moz-border-radius:7px;-webkit-border-radius:7px}
+.cdlContraste{margin:.3em 0;padding:7px 10px;display:inline-block;width:100%;box-sizing:border-box;border-radius:7px;-moz-border-radius:7px;-webkit-border-radius:7px}
 .cdlInversedColor .cdlOtherInput{display:inline-block}
 .cdlUtilLinksContainer .cdlBackToTop{float:right;margin:6px 0 6px 7px;padding:0 7px}
 .cdlUtilLinksContainer .cdlBackToTop a{display:block;float:left;margin-right:5px;position:relative}
